charts/camunda-platform/test/unit/tasklist/golden/deployment.golden.yaml
---
# Source: camunda-platform/charts/tasklist/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda-platform-test-tasklist
  labels:
    app: camunda-platform
    app.kubernetes.io/name: tasklist
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/version: "8.2.12"
    app.kubernetes.io/component: tasklist
  annotations:
    {}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camunda-platform
      app.kubernetes.io/name: tasklist
      app.kubernetes.io/instance: camunda-platform-test
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: camunda-platform
      app.kubernetes.io/component: tasklist
  template:
    metadata:
      labels:
        app: camunda-platform
        app.kubernetes.io/name: tasklist
        app.kubernetes.io/instance: camunda-platform-test
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: camunda-platform
        app.kubernetes.io/version: "8.2.12"
        app.kubernetes.io/component: tasklist
    spec:
      imagePullSecrets:
        []
      containers:
      - name: tasklist
        image: "camunda/tasklist:8.2.12"
        imagePullPolicy: IfNotPresent
        env:
          - name: SPRING_PROFILES_ACTIVE
            value: "identity-auth"
          - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUERURI
            value: "http://camunda-platform-test-keycloak:80/auth/realms/camunda-platform"
          - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWKSETURI
            value: "http://camunda-platform-test-keycloak:80/auth/realms/camunda-platform/protocol/openid-connect/certs"
          - name: CAMUNDA_TASKLIST_IDENTITY_ISSUER_URL
            value: "http://localhost:18080/auth/realms/camunda-platform"
          - name: CAMUNDA_TASKLIST_IDENTITY_ISSUER_BACKEND_URL
            value: "http://camunda-platform-test-keycloak:80/auth/realms/camunda-platform"
          - name: CAMUNDA_TASKLIST_IDENTITY_CLIENT_ID
            value: "tasklist"
          - name: CAMUNDA_TASKLIST_IDENTITY_CLIENT_SECRET
            valueFrom:
              secretKeyRef:
                name: "camunda-platform-test-tasklist-identity-secret"
                key: tasklist-secret
          - name: CAMUNDA_TASKLIST_IDENTITY_AUDIENCE
            value: "tasklist-api"
          - name: CAMUNDA_TASKLIST_IDENTITY_REDIRECT_ROOT_URL
            value: "http://localhost:8082"
          - name: ZEEBE_CLIENT_ID
            value: zeebe
          - name: ZEEBE_CLIENT_SECRET
            valueFrom:
              secretKeyRef:
                name: "camunda-platform-test-zeebe-identity-secret"
                key: zeebe-secret
          - name: ZEEBE_AUTHORIZATION_SERVER_URL
            value: "http://camunda-platform-test-keycloak:80/auth/realms/camunda-platform/protocol/openid-connect/token"
          - name: ZEEBE_TOKEN_AUDIENCE
            value: zeebe-api
          - name: GRAPHQL_PLAYGROUND_ENABLED
            value: "true"
          - name: GRAPHQL_PLAYGROUND_SETTINGS_REQUEST_CREDENTIALS
            value: "include"
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 400m
            memory: 1Gi
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            scheme: HTTP
            port: http
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 5
          timeoutSeconds: 1
        volumeMounts:
        - name: config
          mountPath: /app/resources/application.yml
          subPath: application.yml
      volumes:
      - name: config
        configMap:
          name: camunda-platform-test-tasklist
          defaultMode: 484
